
* ``Repository.iter_files_bytes()`` now properly returns an "iterable of
  byte strings" (aka 'chunked') for the content. It previously was
  returning a plain string, which worked, but performed very poorly when
  building a working tree (file.writelines(str) is very inefficient). This
  can have a large effect on ``bzr checkout`` times. (John Arbash Meinel)

* The smart server verb ``Repository.get_parent_map`` can now include
  information about ghosts when the special revision ``include-missing:``
  is in the requested parents map list. With this flag, ghosts are
  included as ``missing:REVISION_ID``. (Robert Collins, Andrew Bennetts)

* ``_walk_to_common_revisions`` will now batch up at least 50
  revisions before calling ``get_parent_map`` on the target,
  regardless of ``InterRepository``.
  (Andrew Bennetts, Robert Collins)

bzr 1.13
########

:Codename: paraskavedekatriaphobia
:1.13: 2009-03-14
:1.13rc1: 2009-03-10
:1.13.1: 2009-03-23

GNU Changelog output can now be produced by ``bzr log --gnu-changelog``.  Debug
flags can now be set in ``~/.bazaar/bazaar.conf``.  Lightweight checkouts and
stacked branches should both be much faster over remote connections.  

Changes From 1.13 to 1.13.1
***************************
A couple regessions where found in the 1.13 release. The pyrex-generated C
extensions are missing from the .tar.gz and .zip files.  Documentation on how
to generate GNU ChangeLogs is wrong.

Bug Fixes
*********

* Change ``./bzr``'s ``_script_version`` to match ./bzrlib/__init__.py
  version_info. (Bob Tanner, Martin Pool, #345232)

* Distribution archives for 1.13 do not contain generated C extension modules
  (Jean-Francois Roy, Bob Tanner, #344465)

* GNU ChangeLog output can now be produced by bzr log --format gnu-changelog is
  incorrect (Deejay, Bob Tanner, Martin Pool, Robert Collins, #343928)

* ``merge --force`` works again. (Robert Collins, #342105)

Changes From RC1 to Final
*************************
